[gd_scene load_steps=12 format=3 uid="uid://bs76obxtrcy46"]

[ext_resource type="Script" uid="uid://drsowptfi4vam" path="res://scenes/lobby/player_card.gd" id="1_el046"]
[ext_resource type="Theme" uid="uid://cr57qof47xvw8" path="res://art/ui/4x4ui.tres" id="1_jls5p"]
[ext_resource type="Texture2D" uid="uid://baroktadgapan" path="res://art/characters/happy_guy/idle.png" id="2_pjvdb"]
[ext_resource type="Theme" uid="uid://bhjax4m6jyp3m" path="res://art/ui/3x3ui.tres" id="3_hfcqh"]
[ext_resource type="Material" uid="uid://bqv7e2yagptbi" path="res://art/materials/base_color_UI.tres" id="3_ioyuo"]
[ext_resource type="FontFile" uid="uid://lfrxraujgfkl" path="res://art/fonts/Pixel_3x3.ttf" id="5_tvuhl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk6p1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_sjxrt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18dqi"]

[sub_resource type="Theme" id="Theme_7t5ra"]
default_font = ExtResource("5_tvuhl")
default_font_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_o4wf7"]
line_spacing = 0.0
font = ExtResource("5_tvuhl")
font_size = 5
font_color = Color(0.493545, 0.493546, 0.493546, 1)

[node name="PlayerCard" type="MarginContainer"]
custom_minimum_size = Vector2(51, 0)
offset_right = 51.0
offset_bottom = 116.0
theme = ExtResource("1_jls5p")
script = ExtResource("1_el046")

[node name="PanelContainer" type="PanelContainer" parent="."]
material = ExtResource("3_ioyuo")
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yk6p1")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_sjxrt")
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="PlayerName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
material = ExtResource("3_ioyuo")
layout_mode = 2
text = "Player"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9
theme_override_styles/separator = SubResource("StyleBoxEmpty_18dqi")

[node name="CharacterTexture" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_pjvdb")
expand_mode = 4
stretch_mode = 4

[node name="CharacterSelect" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SwitchLeft" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CharacterSelect"]
material = ExtResource("3_ioyuo")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_hfcqh")
theme_override_font_sizes/font_size = 10
text = "<"

[node name="SwitchRight" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CharacterSelect"]
material = ExtResource("3_ioyuo")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_7t5ra")
theme_override_font_sizes/font_size = 10
text = " >"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 9
theme_override_styles/separator = SubResource("StyleBoxEmpty_18dqi")

[node name="DeviceName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_hfcqh")
theme_override_colors/font_color = Color(0.650128, 0.650128, 0.650128, 1)
text = "Authority
1"
label_settings = SubResource("LabelSettings_o4wf7")
horizontal_alignment = 1
max_lines_visible = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CharacterSelect/SwitchLeft" to="." method="decrease_char_icon"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CharacterSelect/SwitchRight" to="." method="increase_char_icon"]
